fix modepage overflow

--- a/frontend/src/components/mode/mode_page.scss
+++ b/frontend/src/components/mode/mode_page.scss
@@ -1,7 +1,10 @@
 .card-list {
   display: flex;
+  height: 100%;
+  width: 100%;
   padding: 6rem;
   justify-content: center;
+  align-items: center;
 }
 
 .card {
